css/styles.css
*,
*:after,
*:before {
  box-sizing: border-box;
}

html {
  font-size: 62.5%;
  margin: 0;
  padding: 0;
}

body {
  margin: 0;
  padding: 0;
  font-family: "Roboto", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
  font-size: 1.6em;
  font-weight: 300;
  letter-spacing: .01em;
  line-height: 1.6;
  background: #131310;
  color: #fff;
  position: relative;
}

.container {
  max-width: 80%;
  margin: 0 auto;
  padding-top: 11.5%;
  text-align: center;
}

.logo {
  position: absolute;
  top: 1.87rem;
  left: 1.87rem;
}

.logo img {
  width: 200px;
}

h1 {
  color: #fff;
  font-size: 4rem;
  font-weight: normal;
  letter-spacing: -0.025em;
}

.job {
  margin: 5rem 0 8rem;
}

.job a {
  display: inline-block;
  white-space: nowrap;
  padding: 0.5rem 3rem;
  height: 5rem;
  
  background-color: #fc7820;
  border: .1rem solid #fc7820;
  border-radius: .4rem;
  box-shadow: 0 4px 5px rgba(0, 0, 0, .3);
  color: #fff;
  cursor: pointer;
  
  font-size: 2rem;
  font-weight: normal;
  letter-spacing: .05em;
  line-height: 2;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
}

.job a:hover {
  background-color: #f60;
  border-color: #f60;
}

.clients {
  text-align: center;
}

.clients h2 {
  font-weight: normal;
}

.clients ul {
  margin: 0;
  padding: 0;
  list-style: none;
}

.clients ul li {
  width: 152px;
  height: 152px;
  display: inline-block;
  overflow: hidden;
  vertical-align: middle;
  margin: .5rem;
  background-color: #fff;
  line-height: 140px;
  border: 1px solid #fc7820;
}

.clients img {
  width: 150px;
  vertical-align: middle;
}

.copyright {
  font-size: 1.1rem;
}

.address {
  position: absolute;
  top: 1.85rem;
  right: 1.85rem;
  text-align: right;
  font-size: 1.5rem;
}

.address a, .address-btn a {
  color: #fc7820;
}

.address-btn {
  position: absolute;
  top: 2rem;
  right: 1.85rem;
  display: none;
}

.phone {
  white-space: nowrap;
}

/* Bachground */
.fullscreen-bg {
  position: fixed;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  overflow: hidden;
  z-index: -100;
  
}

/* BG video */
  
.fullscreen-bg-inner{
  position: relative;
  display: block;
  width: 100%;
  height: 100%;
}

.fullscreen-bg-video-wrap,
.fullscreen-bg-video,
.fullscreen-bg-inner > canvas {
  display: block;
  min-width: 100%;
  min-height: 100%;
  width: auto !important;
  height: auto !important;
}

.fullscreen-bg-video {
  position: absolute;
  top: 0;
  left: 50%;
  -webkit-transform: translate(-50%, 0);
	-moz-transform: translate(-50%, 0);
	  -ms-transform: translate(-50%, 0);
	transform: translate(-50%, 0);
}

.fullscreen-bg-inner > canvas {
  position: relative;
  visibility: hidden;
  z-index: -1;
}

@media (max-width: 767px) {
  h1 {
    font-size: 2.5rem;
    /* letter-spacing: -.4rem; */
  }

  .address {
    font-size: 1rem;
  }
  
  .logo img {
    width: 150px;
  }

  .fullscreen-bg {
    background: url('../video/background.jpg') center center no-repeat;
    background-size: cover;
  }

  .fullscreen-bg-video {
    display: none;
  }

  .clients ul li {
    width: 102px;
    height: 102px;
    line-height: 90px;
  }
  .clients img {
    width: 100px;
  }
}

@media (max-width: 450px) {
  .address {
    position: static;
    text-align: center;
    margin-top: 1rem;
    font-size: 1.5rem;
  }

  .address-btn {
    display: block;
  }
}

/* So that there is no vertical scroll on short screens */
@media (max-height: 700px) {
  .container {
    padding-top: 6%;
  }
}

